--- a/EEG.html
+++ b/EEG.html
@@ -1,215 +1,158 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Transparent rPPG-EEG Dashboard</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>EEG + rPPG Dashboard (First Version)</title>
+  <style>
+    body {
+      background: #000;
+      color: #fff;
+      font-family: Arial;
+      text-align: center;
+    }
 
-<!-- Chart.js -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+    video {
+      width: 260px;
+      border-radius: 10px;
+      margin-top: 10px;
+    }
 
-<!-- FFT -->
-<script src="https://cdn.jsdelivr.net/npm/fft.js@0.3.0/dist/fft.min.js"></script>
+    canvas {
+      width: 90%;
+      height: 200px;
+      background: #111;
+      margin-top: 10px;
+      border-radius: 10px;
+    }
 
-<!-- CryptoJS core + RIPEMD-320 extension -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/ripemd320.js"></script>
+    #foreheadBox {
+      position: absolute;
+      border: 2px solid red;
+      pointer-events: none;
+    }
+  </style>
 
-<style>
-body {
-  margin: 0;
-  overflow: hidden;
-  font-family: Arial, sans-serif;
-  background: black;
-}
-
-/* Camera video behind everything */
-#cameraFeed {
-  position: fixed;
-  top:0; left:0;
-  width:100vw;
-  height:100vh;
-  object-fit: cover;
-  z-index:0;
-}
-
-/* Charts float like AR HUD, faint frame only */
-.chartBox {
-  backdrop-filter: blur(2px);
-  background: rgba(0,0,0,0.1); /* 90% transparent */
-  border-radius: 20px;
-  padding: 6px;
-  z-index: 20;
-}
-
-/* Layout: flexible grid overlay */
-#chartsGrid {
-  position: absolute;
-  top:0; left:0;
-  width:100%; height:100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 33vh;
-  gap: 8px;
-  padding: 8px;
-  z-index: 20;
-}
-
-.chartBox canvas {
-  width: 100%;
-  height: 100%;
-  background: transparent !important; /* ensure canvas is transparent */
-}
-
-/* Camera button */
-#snapBtn {
-  position: fixed;
-  bottom: 20px;
-  left: calc(50% - 35px);
-  width: 70px; height: 70px;
-  border-radius: 50%;
-  background: red;
-  border: 4px solid white;
-  z-index: 50;
-}
-
-/* Flip camera */
-#flipBtn {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  width: 60px; height: 60px;
-  border-radius: 50%;
-  background: white;
-  color: black;
-  text-align: center;
-  line-height: 60px;
-  font-size: 22px;
-  z-index: 50;
-}
-</style>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
 
-<video id="cameraFeed" autoplay playsinline></video>
+<h2>EEG + rPPG Heartbeat Dashboard (Original Version)</h2>
 
-<button id="snapBtn"></button>
-<button id="flipBtn">⇆</button>
+<video id="camera" autoplay muted playsinline></video>
+<div id="foreheadBox"></div>
 
-<div id="chartsGrid"></div>
+<canvas id="rppgChart"></canvas>
+<canvas id="eegChart"></canvas>
 
 <script>
-/* ======================================================
-   CAMERA SETUP
-====================================================== */
-let cameraFacing = "user";
-async function startCamera() {
-  const video = document.getElementById("cameraFeed");
-  const constraints = {
-    audio:false,
-    video:{ facingMode: cameraFacing }
-  };
-  try {
-    video.srcObject = await navigator.mediaDevices.getUserMedia(constraints);
-  } catch(e){ console.error(e); }
-}
-document.getElementById("flipBtn").onclick = () => {
-  cameraFacing = cameraFacing === "user" ? "environment" : "user";
-  startCamera();
-};
-startCamera();
+/* -------------------------------
+   CAMERA + rPPG (FIRST VERSION)
+-------------------------------- */
+const video = document.getElementById('camera');
 
-/* ======================================================
-   CONSTANTS
-====================================================== */
-const SAMPLE_RATE = 256;
-const BUFFER_SIZE = 256;
-const fft = new FFT(BUFFER_SIZE);
-const rppgBuffer = new Float32Array(BUFFER_SIZE);
-const eegBuffer  = new Float32Array(BUFFER_SIZE);
+navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" }})
+.then(stream => video.srcObject = stream);
 
-/* EEG bands */
-const eegBands = {
-  Delta:[0.5,4], Theta:[4,8], Alpha:[8,12], Beta:[12,30], Gamma:[30,80]
-};
+let rData = [];
+let rIndex = 0;
 
-/* Hash */
-function hashFrame(arr){ return CryptoJS.RIPEMD320(JSON.stringify(arr)).toString(); }
-
-/* ======================================================
-   CHARTS
-====================================================== */
-const grid = document.getElementById("chartsGrid");
-const charts = [];
-function addChart(title){
-  const box = document.createElement("div");
-  box.className="chartBox";
-  const c = document.createElement("canvas");
-  box.appendChild(c);
-  grid.appendChild(box);
-  return new Chart(c,{
-    type:"line",
-    data:{ labels:Array(60).fill(""), datasets:[{
-      label:title,
-      data:Array(60).fill(0),
-      borderColor:"rgba(0,200,255,0.9)",
-      backgroundColor:"transparent",
-      borderWidth:2,
-      pointRadius:0,
-      tension:0.25
-    }]},
-    options:{
-      responsive:true,
-      maintainAspectRatio:false,
-      animation:false,
-      scales:{x:{display:false},y:{display:false}},
-      plugins:{legend:{display:false}}
-    }
-  });
-}
-["Combined HE","Delta","Theta","Alpha","Beta","Gamma",
- "rPPG","EEG Raw","FFT Spectrum","Heart Rate","Breathing Rate","Hash"]
-.forEach(n=>charts.push(addChart(n)));
-
-/* ======================================================
-   LOOP
-====================================================== */
-function updateCharts(){
-  const t=performance.now();
-  for(let i=0;i<BUFFER_SIZE;i++){
-    eegBuffer[i]=Math.sin(i*0.1+t/300);
-    rppgBuffer[i]=Math.sin(i*0.03+t/400);
+const rppgCtx = document.getElementById('rppgChart').getContext('2d');
+const rppgChart = new Chart(rppgCtx, {
+  type: 'line',
+  data: {
+    labels: Array(300).fill(""),
+    datasets: [{
+      label: "rPPG Heart Signal",
+      data: Array(300).fill(0),
+      borderColor: "red",
+      borderWidth: 2,
+      pointRadius: 0
+    }]
+  },
+  options: {
+    animation: false,
+    scales: { y: { min: -20, max: 20 } }
   }
-  const input=fft.createComplexArray(), output=fft.createComplexArray();
-  for(let i=0;i<BUFFER_SIZE;i++){ input[2*i]=eegBuffer[i]; input[2*i+1]=0; }
-  fft.transform(output,input);
-  const mags=[];
-  for(let i=0;i<BUFFER_SIZE/2;i++){
-    const re=output[2*i], im=output[2*i+1];
-    mags[i]=Math.sqrt(re*re+im*im);
+});
+
+// Main rPPG frame reader
+setInterval(() => {
+  if (!video.videoWidth) return;
+
+  const w = video.videoWidth;
+  const h = video.videoHeight;
+
+  const foreheadW = w * 0.30;
+  const foreheadH = h * 0.10;
+  const foreheadX = w * 0.35;
+  const foreheadY = h * 0.15;
+
+  const box = document.getElementById("foreheadBox");
+  const rect = video.getBoundingClientRect();
+  const scaleX = rect.width / w;
+  const scaleY = rect.height / h;
+  box.style.left = (rect.left + foreheadX * scaleX) + "px";
+  box.style.top  = (rect.top + foreheadY * scaleY) + "px";
+  box.style.width  = foreheadW * scaleX + "px";
+  box.style.height = foreheadH * scaleY + "px";
+
+  // draw forehead into a buffer canvas
+  const temp = document.createElement("canvas");
+  temp.width = foreheadW;
+  temp.height = foreheadH;
+  const tctx = temp.getContext("2d");
+  tctx.drawImage(video, foreheadX, foreheadY, foreheadW, foreheadH, 0, 0, foreheadW, foreheadH);
+
+  const frame = tctx.getImageData(0, 0, foreheadW, foreheadH);
+  let sum = 0, count = 0;
+
+  for (let i = 0; i < frame.data.length; i += 4) {
+    sum += frame.data[i]; // Red channel average
+    count++;
   }
-  charts[0].data.datasets[0].data.push(Math.sqrt(rppgBuffer[10]**2+eegBuffer[10]**2));
-  let idx=1;
-  for(const [lo,hi] of Object.values(eegBands)){
-    const loBin=Math.floor(lo*(BUFFER_SIZE/SAMPLE_RATE));
-    const hiBin=Math.floor(hi*(BUFFER_SIZE/SAMPLE_RATE));
-    const avg=mags.slice(loBin,hiBin).reduce((a,b)=>a+b,0)/(hiBin-loBin);
-    charts[idx++].data.datasets[0].data.push(avg);
+
+  const val = (sum / count) - 128; // center baseline
+  rData.push(val);
+  if (rData.length > 300) rData.shift();
+
+  rppgChart.data.datasets[0].data = rData;
+  rppgChart.update();
+}, 50);
+
+/* -------------------------------
+   EEG SECTION (FIRST VERSION)
+-------------------------------- */
+let eegData = [];
+for (let i = 0; i < 300; i++) eegData.push(0);
+
+const eegCtx = document.getElementById('eegChart').getContext('2d');
+const eegChart = new Chart(eegCtx, {
+  type: 'line',
+  data: {
+    labels: Array(300).fill(""),
+    datasets: [{
+      label: "EEG Signal",
+      data: eegData,
+      borderColor: "cyan",
+      borderWidth: 2,
+      pointRadius: 0
+    }]
+  },
+  options: {
+    animation: false,
+    scales: { y: { min: -100, max: 100 } }
   }
-  charts[6].data.datasets[0].data.push(rppgBuffer[128]);
-  charts[7].data.datasets[0].data.push(eegBuffer[128]);
-  charts[8].data.datasets[0].data=mags.slice(0,60);
-  charts[9].data.datasets[0].data.push(60+40*Math.abs(rppgBuffer[100]));
-  charts[10].data.datasets[0].data.push(14+6*Math.abs(rppgBuffer[20]));
-  charts[11].data.datasets[0].data.push(hashFrame(mags).length%30);
-  charts.forEach(ch=>{
-    const d=ch.data.datasets[0].data;
-    while(d.length>60) d.shift();
-    ch.update('none');
-  });
-}
-setInterval(updateCharts,40);
+});
+
+// Mock EEG signal (first version demo)
+setInterval(() => {
+  const newVal = Math.sin(Date.now() / 120) * 50;
+  eegData.push(newVal);
+  if (eegData.length > 300) eegData.shift();
+  eegChart.update();
+}, 50);
+
 </script>
+
 </body>
 </html>
